--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
