--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -59,7 +62,21 @@
     ]
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.9.0",
     "@craco/craco": "^7.1.0",
-    "@craco/types": "^7.1.0"
+    "@craco/types": "^7.1.0",
+    "@storybook/addon-essentials": "8.3.4",
+    "@storybook/addon-interactions": "8.3.4",
+    "@storybook/addon-links": "8.3.4",
+    "@storybook/addon-onboarding": "8.3.4",
+    "@storybook/blocks": "8.3.4",
+    "@storybook/preset-create-react-app": "8.3.4",
+    "@storybook/react": "8.3.4",
+    "@storybook/react-webpack5": "8.3.4",
+    "@storybook/test": "8.3.4",
+    "eslint-plugin-storybook": "^0.9.0",
+    "prop-types": "15.8.1",
+    "storybook": "8.3.4",
+    "webpack": "5.95.0"
   }
 }
