--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/blocks": "8.3.4",
     "@storybook/preset-create-react-app": "8.3.4",
     "@storybook/react": "8.3.4",
+    "@storybook/react-vite": "^8.3.4",
     "@storybook/react-webpack5": "8.3.4",
     "@storybook/test": "8.3.4",
     "eslint-plugin-storybook": "^0.9.0",
