--- a/package.json
+++ b/package.json
@@ -71,16 +71,17 @@
     "@storybook/addon-onboarding": "8.3.4",
     "@storybook/blocks": "8.3.4",
     "@storybook/preset-create-react-app": "8.3.4",
-    "@storybook/react": "8.3.4",
+    "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.4",
     "@storybook/react-webpack5": "8.3.4",
     "@storybook/test": "8.3.4",
+    "@svgr/webpack": "^8.1.0",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@types/storybook__react": "^5.2.1",
     "eslint-plugin-storybook": "^0.9.0",
     "prop-types": "15.8.1",
     "storybook": "8.3.4",
-    "webpack": "5.95.0",
-    "@svgr/webpack": "^8.1.0",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0"
+    "webpack": "5.95.0"
   }
 }
