--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/storybook__react": "^5.2.1",
+    "ajv": "^7.2.4",
     "eslint-plugin-storybook": "^0.9.0",
     "prop-types": "15.8.1",
     "storybook": "8.3.4",
