--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@achmadk/react-loading-overlay": "^3.0.2",
     "@emotion/css": "^11.13.0",
+    "@iconify-icons/ic": "^1.2.13",
     "@iconify/react": "^5.0.2",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
