--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@achmadk/react-loading-overlay": "^3.0.3",
+    "@achmadk/react-loading-overlay": "^3.0.2",
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/css": "^11.13.0",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.0",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -25,12 +24,13 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "date-fns": "2.29.2",
+    "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-loading-overlay": "^1.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -79,11 +79,13 @@
     "@storybook/addon-links": "8.3.4",
     "@storybook/addon-onboarding": "8.3.4",
     "@storybook/blocks": "8.3.4",
+    "@storybook/jest": "^0.2.3",
     "@storybook/preset-create-react-app": "8.3.4",
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.4",
     "@storybook/react-webpack5": "8.3.4",
     "@storybook/test": "8.3.4",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
