product n material (chua update table header)

--- a/FrontEnd/public/manifest.json
+++ b/FrontEnd/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GSTD",
-  "name": "Giam sat thiet bi",
+  "short_name": "DO_AN_1",
+  "name": "Cafeteria Management System",
   "icons": [
     {
       "src": "favicon.ico",
